--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,110 @@
-b1{
-    
+/* base */
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
 }
+
+html{
+    font-size: 62.5%;
+
+}
+
+body{
+    font-size: 1.6rem;
+    font-family: "Montserrat", sans-serif;
+}
+
+a{
+    text-decoration: none;
+}
+
+img{
+    max-width: 100%;
+}
+
+/* Utilities */
+
+.container{
+    max-width: 125rem;
+    margin: 0 auto;
+    padding: 0 1.5rem;
+}
+
+/* header */
+
+header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+}
+
+.nav{
+    height: 10rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.nav-list{
+    display: flex;
+    list-style: none;
+}
+
+.nav-item{
+    margin-right: 5rem;
+}
+
+.nav-item:last-child{
+    margin-right: 0;
+}
+
+.nav-link{
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    color: white;
+    transition: opacity .3s;
+}
+
+.nav-link:hover{
+    opacity: .6;
+}
+
+
+.logo{
+    display: block;
+    width: 8rem;
+
+}
+
+/* main contant */
+.landingPage{
+    width: 100%;
+    min-height: 100vh;
+    background-image: linear-gradient(to bottom right, #3B4679, #2B3153);
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    z-index: 1;
+}
+
+.landingPage::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: inherit;
+    height: 100vh;
+    background-image: url("./images/bg-pat.png");
+    background-size:cover ;
+    opacity: .4;
+    z-index: -1;
+}
+
+.c
+
