--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,10 @@ img{
     padding: 0 1.5rem;
 }
 
+.hueShift{
+    animation: hue-shift 5s infinite alternate;
+}
+
 /* header */
 
 header{
@@ -106,5 +110,240 @@ header{
     z-index: -1;
 }
 
-.c
+.content{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+
+.contentDetails{
+    max-width: 80%;
+    
+}
+
+.title{
+    font-size: 6rem;
+    color: white;
+    margin-bottom: 1rem;
+
+}
+
+.description{
+    color: #929FC5;
+    margin-bottom: 2.5rem;
+}
+
+.search{
+    margin-bottom: 2.5rem;
+}
+
+.search input{
+    border: none;
+    border-radius: 5rem;
+    padding: 2rem;
+    outline: none;
+}
+
+.searchBar{
+    width: calc(100% - 3.2rem);
+}
+
+.searchBtn{
+    width: 10rem;
+    background-image: linear-gradient(to right, #FF83D5, #FFCCB0);
+    color: white;
+    cursor: pointer;
+    margin-left: -10rem;
+}
+
+.searchBtn:hover{
+    background-image: linear-gradient(to left, #FF83D5, #FFCCB0);
+}
+
+.smList{
+    display: flex;
+}
+
+.smLink{
+    color: #929FC5;
+    width: 3rem;
+    height: 3rem;
+    border: 1px solid #929FC5;
+    border-radius: 50%;
+    display: flex;
+    margin-right: 2.5rem;
+}
+
+.smLink i{
+    margin: auto;
+
+}
+
+.smLink:hover{
+    background-image: linear-gradient(to right, #A971FF, #00F0FF);
+    color: white;
+}
+
+.imageGroup{
+    text-align: center;
+    position: relative;
+}
+
+.large{
+    animation: move-up 2s infinite alternate;
+   
+}
+
+.bean{
+    position:absolute;
+    top: 2.5rem;
+    left: -1rem;
+    z-index: 10;
+    animation: move-down 2s infinite alternate;
+}
+
+.blob{
+    position: absolute;
+    z-index: -1;
+}
+
+.blob1{
+    top: -11rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.blob2{
+    top: 15rem;
+    left: -17rem;
+}
+
+.blob3{
+    right: 5rem;
+    bottom: -24rem;
+}
+
+.blob4{
+    left: -21rem;
+    bottom: -17rem;
+}
+
+/* animation */
+@keyframes move-up{
+    from{
+        transform: translateY(0);
+    }
+    to{
+        transform: translateY(2rem);
+    }
+}
+
+@keyframes move-down{
+    from{
+        transform: translateY(0);
+    }
+    to{
+        transform: translateY(-2rem);
+    }
+}
+
+@keyframes hue-shift{
+    from{
+        filter: hue-rotate(0);
+    }
+    to{
+        filter: hue-rotate(360deg);
+    }
+}
+
+/* Media Query */
+
+@media screen and (max-width: 768px){
+
+    .nav{
+        align-items: center;
+    }
+
+    .content{
+        grid-template-columns: 1fr;
+    }
+
+    .contentDetails{
+        order: 1;
+        max-width: 100%;
+    }
+
+    .title{
+        font-size: 3.5rem;
+    }
+
+    .description{
+        font-size: 1.4rem;
+    }
+
+    .imageGroup{
+        margin-top: 10rem;
+    }
+
+    .large{
+        width: 70%;
+    }
+
+    .bean{
+        width: 30%;
+        top: -1rem;
+        left: 5rem;
+    }
+
+    .blob1{
+        display: none;
+    }
+
+    .blob2{
+        left: 30rem;
+        bottom: -1rem;
+        top: revert;
+        width: 25%;
+    }
+
+    .blob3{
+        right: -3rem;
+        bottom: -25rem;
+    }
+
+    .blob4{
+        display: none;
+    }
+
+    
+}
+
+@media screen and (max-width: 700px){
+    .nav{
+        height: 5rem;
+        flex-direction: column;
+    }
+
+    .logo-box{
+        max-width: 2rem 0;
+    }
+
+    .nav-item{
+        margin-right: 2.5rem 0;
+    }
+
+    .blob2{
+        display: none;
+    }
+
+    .blob3{
+        width: 50%;
+        bottom: -10rem;
+    }
+
+    
+
+
+}
+ 
 
