--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ header{
 }
 
 .nav-list{
+    font-weight: 700;
     display: flex;
     list-style: none;
 }
@@ -68,8 +69,7 @@ header{
 }
 
 .nav-link{
-    font-size: 1.2rem;
-    text-transform: uppercase;
+    font-size: 1.4rem;
     color: white;
     transition: opacity .3s;
 }
@@ -194,13 +194,34 @@ header{
    
 }
 
-.bean{
+.chain{
+    width: 200px;
     position:absolute;
     top: 2.5rem;
     left: -1rem;
     z-index: 10;
     animation: move-down 2s infinite alternate;
 }
+
+.xrp{
+    width: 200px;
+    position:absolute;
+    top: 10rem;
+    left: 40rem;
+    z-index: 10;
+    animation: move-down 2s infinite alternate;
+}
+
+.bitcoin{
+    width: 200px;
+    position:absolute;
+    top: 40rem;
+    left: -1rem;
+    z-index: 10;
+    animation: move-down 2s infinite alternate;
+}
+
+
 
 .blob{
     position: absolute;
@@ -258,6 +279,8 @@ header{
 
 /* Media Query */
 
+
+
 @media screen and (max-width: 768px){
 
     .nav{
@@ -286,13 +309,25 @@ header{
     }
 
     .large{
-        width: 70%;
+        width: 70%; 
     }
 
-    .bean{
+    .chain{
         width: 30%;
         top: -1rem;
         left: 5rem;
+    }
+
+    .xrp{
+        width: 30%;
+        top: 1rem;
+        left: 21rem;
+    }
+
+    .bitcoin{
+        width: 30%;
+        top: 15rem;
+        left: 3rem;
     }
 
     .blob1{
@@ -341,7 +376,7 @@ header{
         bottom: -10rem;
     }
 
-    
+
 
 
 }
